ci/di fixes